<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">hoteldo</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_book">Book</string>
    <string name="lbl_2_nights">2 Nights</string>
    <string name="lbl_40">$40</string>
    <string name="lbl_user_name">User Name</string>
    <string name="lbl_message">Message</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_room_a">Room A</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_502">$50</string>
    <string name="lbl_tax">Tax</string>
    <string name="lbl_phone_number">Phone Number</string>
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_enter_message">Enter Message</string>
    <string name="lbl_5_0">5.0</string>
    <string name="lbl_departure_date">Departure Date</string>
    <string name="lbl_filters">Filters</string>
    <string name="lbl_20_per_night">$20 Per Night</string>
    <string name="lbl_10">$10</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_hotel_details">Hotel Details</string>
    <string name="lbl_hi_zain">Hi, Zain</string>
    <string name="lbl_rooms_available">Rooms Available</string>
    <string name="lbl_9_00_pm">9:00 pm</string>
    <string name="lbl_hotel_abc">Hotel ABC </string>
    <string name="lbl_gulberg_iii">Gulberg III</string>
    <string name="msg_lahore_pakista">Lahore, Pakistan</string>
    <string name="lbl_from_69">From $69</string>
    <string name="lbl">.</string>
    <string name="lbl_guest_details">Guest Details</string>
    <string name="lbl_cnic">CNIC</string>
    <string name="lbl_hotel_abc2">Hotel ABC</string>
    <string name="lbl_conversations">Conversations</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_hoteldo">HOTELDO</string>
    <string name="lbl_arrival_date">Arrival Date</string>
    <string name="spinner_prompt">Filters</string>
    <string-array name="spinner_items">
        <item>Sort By</item>
        <item>Price: Ascending</item>
        <item>Price: Descending</item>
        <item>Ratings: Ascending</item>
        <item>Ratings: Descending</item>
    </string-array>
</resources>
