<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_527pxv"
    android:layout_gravity="start"
    android:layout_marginBottom="@dimen/_20pxv"
    android:background="#00F11212"
    app:cardBackgroundColor="#00B80D0D"
    app:cardCornerRadius="@dimen/_15pxh"
    app:cardElevation="0dp">
    <ImageView
        android:id="@+id/hotel_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_507pxv"
        android:layout_marginBottom="@dimen/_20pxv"
        android:scaleType="fitXY"
        android:src="@drawable/img_hotelimage"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_hotelimage" />

    <LinearLayout
        android:id="@+id/linearRatingview"
        style="@style/groupStylecornerRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginTop="@dimen/_50pxv"
        android:layout_marginBottom="@dimen/_20pxv"

        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageStar"
            android:layout_width="@dimen/_20pxh"
            android:layout_height="@dimen/_19pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_116pxv"
            android:layout_marginBottom="@dimen/_17pxv"
            android:scaleType="fitXY"
            android:src="@drawable/img_star"
            tools:ignore="ContentDescription"
            tools:src="@drawable/img_star" />

        <TextView
            android:id="@+id/hotel_rating"
            style="@style/txtMontserratromanbold16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_117pxv"
            android:layout_marginEnd="@dimen/_249pxh"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_weight="0.55"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_5_0"
            tools:text="@string/lbl_5_0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearColumnlanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/_11pxh"
        android:layout_marginTop="@dimen/_72pxv"
        android:layout_marginEnd="@dimen/_11pxh"
        android:layout_marginBottom="@dimen/_62pxv"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hotel_name"
            style="@style/txtMontserratromanbold40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/lbl_hotel_abc"
            tools:text="@string/lbl_hotel_abc" />

        <LinearLayout
            android:id="@+id/linearRowlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:gravity="start"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageLocation"
                android:layout_width="@dimen/_16pxh"
                android:layout_height="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_marginBottom="@dimen/_1pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_location"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_location" />

            <TextView
                android:id="@+id/hotel_location"
                style="@style/txtMontserratromanbold20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_weight="0.87"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/lbl_gulberg_iii"
                tools:text="@string/lbl_gulberg_iii" />
        </LinearLayout>

        <TextView
            android:id="@+id/hotel_city"
            style="@style/txtMontserratromanregular14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_marginEnd="@dimen/_35pxh"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/msg_lahore_pakista"
            tools:text="@string/msg_lahore_pakista" />
    </LinearLayout>

    <TextView
        android:id="@+id/hotel_price"
        style="@style/btnSolidRounded_2"
        android:layout_width="@dimen/_168pxh"
        android:layout_height="@dimen/_51pxv"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/_24pxh"
        android:layout_marginTop="@dimen/_10pxv"
        android:layout_marginEnd="@dimen/_14pxh"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_17pxh"
        android:paddingTop="@dimen/_8pxv"
        android:paddingEnd="@dimen/_12pxh"
        android:paddingBottom="@dimen/_8pxv"
        android:singleLine="true"
        android:text="@string/lbl_from_69"
        android:textAllCaps="false"
        tools:text="@string/lbl_from_69" />
</androidx.cardview.widget.CardView>
